Implemented uniform parameter design

--- a/Kapitel/02_App/03_Map/01_View/MapObjectInfoDisplay/main.tex
+++ b/Kapitel/02_App/03_Map/01_View/MapObjectInfoDisplay/main.tex
@@ -90,5 +90,5 @@ In beiden Fällen gibt es die gleiche Animation: Die kompakte Anzeige verschwind
 
 \paragraph*{Parameter}
 \begin{itemize}
-    \item controller : IMapObjectInfoController IMapObjectInfoController von dem diese Klasse ihre Daten bezieht.
+    \item \texttt{controller : IMapObjectInfoController} IMapObjectInfoController von dem diese Klasse ihre Daten bezieht.
 \end{itemize}
