--- a/Kapitel/02_App/03_Map/01_View/MapScreen/main.tex
+++ b/Kapitel/02_App/03_Map/01_View/MapScreen/main.tex
@@ -29,7 +29,7 @@ Weiter werden folgende Schaltflächen angezeigt, durch welche man in andere Ansi
 
 \paragraph*{Parameter}
 \begin{itemize}
-    \item dataProvider : MapDisplayDataProvider Klasse, die die Hintergrundkarte und Kartenposition bereitstellt.
+    \item \texttt{dataProvider : MapDisplayDataProvider} Klasse, die die Hintergrundkarte und Kartenposition bereitstellt.
 \end{itemize}
 
 \paragraph*{Interaktionen}
