--- a/Kapitel/02_App/03_Map/02_ViewModel/BuildingModeController/main.tex
+++ b/Kapitel/02_App/03_Map/02_ViewModel/BuildingModeController/main.tex
@@ -11,6 +11,6 @@ Diese Klasse beobachtet den Wert \texttt{+ isLevelMode() : LiveData<boolean>} de
 Erstellt einen neuen BuildingModeController.
 \paragraph*{Parameter}
 \begin{itemize}
-    \item dataProvider : IMapDataProvider IMapDataProvider von dem diese Klasse die Kartendaten bezieht.
-    \item levelController : LevelModeController LevelModeController der Karte.
+    \item \texttt{dataProvider : IMapDataProvider} IMapDataProvider von dem diese Klasse die Kartendaten bezieht.
+    \item \texttt{levelController : LevelModeController} LevelModeController der Karte.
 \end{itemize}
