--- a/Kapitel/02_App/03_Map/02_ViewModel/MapController/main.tex
+++ b/Kapitel/02_App/03_Map/02_ViewModel/MapController/main.tex
@@ -18,5 +18,5 @@ Erstellt einen neuen MapController.
 Erstellt einen neuen LevelModeController, einen BuildingModeController und einen IMapObjectInfoController.
 \paragraph*{Parameter}
 \begin{itemize}
-    \item dataProvider : IMapDataProvider IMapDataProvider von dem diese Klasse die Kartendaten bezieht.
+    \item \texttt{dataProvider : IMapDataProvider} IMapDataProvider von dem diese Klasse die Kartendaten bezieht.
 \end{itemize}
