--- a/Kapitel/02_App/03_Map/02_ViewModel/MapDisplayDataProvider/main.tex
+++ b/Kapitel/02_App/03_Map/02_ViewModel/MapDisplayDataProvider/main.tex
@@ -19,7 +19,7 @@ LiveData<TileSource> mit den Kartendaten.
 Speichert eine gegebene Position als letzte Position.
 \paragraph*{Parameter}
 \begin{itemize}
-    \item pos : IGeoPoint zu speichernde Position.
+    \item \texttt{pos : IGeoPoint} zu speichernde Position.
 \end{itemize}
 \paragraph*{Rückgabewert}
 Void.
