--- a/Kapitel/02_App/03_Map/02_ViewModel/MapObjectInfoController/main.tex
+++ b/Kapitel/02_App/03_Map/02_ViewModel/MapObjectInfoController/main.tex
@@ -10,6 +10,6 @@ dafür aus einem IMapDataProvider und einem IAliasDataProvider.
 Erstellt einen neuen MapObjectInfoController.
 \paragraph*{Parameter}
 \begin{itemize}
-    \item mapDataProvider : IMapDataProvider IMapDataProvider von dem diese Klasse die Kartendaten bezieht.
-    \item aliasDataProvider : IAliasDataProvider IAliasDataProvider von dem diese Klasse die Aliasdaten bezieht.
+    \item \texttt{mapDataProvider : IMapDataProvider} IMapDataProvider von dem diese Klasse die Kartendaten bezieht.
+    \item \texttt{aliasDataProvider : IAliasDataProvider} IAliasDataProvider von dem diese Klasse die Aliasdaten bezieht.
 \end{itemize}
