--- a/Kapitel/02_App/03_Map/03_Model/MapObjectInformationProvider/main.tex
+++ b/Kapitel/02_App/03_Map/03_Model/MapObjectInformationProvider/main.tex
@@ -9,7 +9,7 @@ Diese Klasse stellt Informationen zu Kartenobjekten bereit.
 Gibt die Adresse eines Gebäudes zurück.
 \paragraph*{Parameter}
 \begin{itemize}
-    \item mapId : int MapId des Gebäudes.
+    \item \texttt{mapId : int} MapId des Gebäudes.
 \end{itemize}
 \paragraph*{Rückgabewert}
 String mit Adresse, oder \texttt{null}, wenn MapId kein Gebäude ist.
@@ -27,7 +27,7 @@ Diese Methode gibt zu einem, durch seine MapId gegebenen, Raum folgende Informat
 Ist die gegebene MapId ungültig oder kein Raum, wird \texttt{null} zurückgegeben.
 \paragraph*{Parameter}
 \begin{itemize}
-    \item mapId : int MapId des Raums.
+    \item \texttt{mapId : int} MapId des Raums.
 \end{itemize}
 \paragraph*{Rückgabewert}
 (RoomType, String, int, List<String>) Raumdaten oder \texttt{null}.
@@ -41,7 +41,7 @@ Personen zurück. Diese kann leer sein.\\
 Ist die gegebene MapId ungültig ist sie ebenfalls leer.
 \paragraph*{Parameter}
 \begin{itemize}
-    \item mapId : int MapId des Kartenobjekts.
+    \item \texttt{mapId : int} MapId des Kartenobjekts.
 \end{itemize}
 \paragraph*{Rückgabewert}
 List<String> mit den Namen aller zugeordneten Personen.
