--- a/Kapitel/02_App/03_Map/03_Model/PositionDataManager/main.tex
+++ b/Kapitel/02_App/03_Map/03_Model/PositionDataManager/main.tex
@@ -20,7 +20,7 @@ IGeoPoint mit letzter gespeicherter Position (oder Default-Wert), ist nie null.
 Speichert eine Position als letzte Position.
 \paragraph*{Parameter}
 \begin{itemize}
-    \item pos : IGeoPoint zu speichernde Position.
+    \item \texttt{pos : IGeoPoint} zu speichernde Position.
 \end{itemize}
 \paragraph*{Rückgabewert}
 Void.
