--- a/Kapitel/02_App/04_AddAlias/Klassen/GlobalAliasManager/main.tex
+++ b/Kapitel/02_App/04_AddAlias/Klassen/GlobalAliasManager/main.tex
@@ -13,8 +13,8 @@ Wirft eine NotAuthenticatedException, wenn der Benutzer sich anmelden muss.
 Reicht einen Alias-Vorschlag beim Server ein.
 \paragraph*{Parameter}
 \begin{itemize}
-    \item mapId : int MapId des Kartenobjekts.
-    \item alias : String Bezeichner.
+    \item \texttt{mapId : int} MapId des Kartenobjekts.
+    \item \texttt{alias : String} Bezeichner.
 \end{itemize}
 \paragraph*{Rückgabewert}
 Void.
@@ -27,7 +27,7 @@ Gibt eine Liste mit relevanten Alias-Vorschlägen für das Kartenobjekt zurück,
 die vom Benutzer noch bewertet werden dürfen.
 \paragraph*{Parameter}
 \begin{itemize}
-    \item mapId : int MapId des Kartenobjekts.
+    \item \texttt{mapId : int} MapId des Kartenobjekts.
 \end{itemize}
 \paragraph*{Rückgabewert}
 List<String>, Liste der Alias-Vorschläge.
@@ -40,9 +40,9 @@ Wirft eine NotAuthenticatedException, wenn der Benutzer sich anmelden muss.
 Diese Methode sendet das Feedback zu einem Alias-Vorschlag an den Server.
 \paragraph*{Parameter}
 \begin{itemize}
-    \item mapId : int MapId des Kartenobjekts.
-    \item suggestion : String Vorschlag. 
-    \item feedback : SuggestionFeedback Feedback.
+    \item \texttt{mapId : int} MapId des Kartenobjekts.
+    \item \texttt{suggestion : String} Vorschlag. 
+    \item \texttt{feedback : SuggestionFeedback} Feedback.
 \end{itemize}
 \paragraph*{Rückgabewert}
 Void.
