--- a/Kapitel/02_App/04_AddAlias/Klassen/LocalAliasManager/main.tex
+++ b/Kapitel/02_App/04_AddAlias/Klassen/LocalAliasManager/main.tex
@@ -11,8 +11,8 @@ globalen Alias-Tabelle lokal gespeichert ist, sind auch Getter auf globale Alias
 Erstellt und speichert einen neuen lokalen Alias.
 \paragraph*{Parameter}
 \begin{itemize}
-    \item mapId : int MapId des Kartenobjekts.
-    \item alias : String Alias.
+    \item \texttt{mapId : int} MapId des Kartenobjekts.
+    \item \texttt{alias : String} Alias.
 \end{itemize}
 \paragraph*{Rückgabewert}
 Void.
@@ -22,8 +22,8 @@ Void.
 Löscht einen lokalen Alias. Existiert er nicht, passiert nichts.
 \paragraph*{Parameter}
 \begin{itemize}
-    \item mapId : int MapId des Kartenobjekts.
-    \item alias : String Alias der zu löschen ist.
+    \item \texttt{mapId : int} MapId des Kartenobjekts.
+    \item \texttt{alias : String} Alias der zu löschen ist.
 \end{itemize}
 \paragraph*{Rückgabewert}
 Void.
@@ -33,7 +33,7 @@ Void.
 Gibt eine Liste aller lokalen Aliasse eines Kartenobjekts zurück.
 \paragraph*{Parameter}
 \begin{itemize}
-    \item mapId : int MapId des Kartenobjekts.
+    \item \texttt{mapId : int} MapId des Kartenobjekts.
 \end{itemize}
 \paragraph*{Rückgabewert}
 LiveData<List<String>>, Liste der lokalen Aliasse.
@@ -43,7 +43,7 @@ LiveData<List<String>>, Liste der lokalen Aliasse.
 Gibt eine Liste aller globalen Aliasse eines Kartenobjekts zurück. 
 \paragraph*{Parameter}
 \begin{itemize}
-    \item mapId : int MapId des Kartenobjekts.
+    \item \texttt{mapId : int} MapId des Kartenobjekts.
 \end{itemize}
 \paragraph*{Rückgabewert}
 List<String>, Liste der globalen Aliasse.
