--- a/Kapitel/02_App/05_Search/Klassen/SearchController/main.tex
+++ b/Kapitel/02_App/05_Search/Klassen/SearchController/main.tex
@@ -23,7 +23,7 @@ LiveData<List<String>>, Suchvorschläge zur Eingabe, die eine Klasse, die ISearc
 Nimmt den aktuellen Input-String entgegen und aktualisiert damit die Suchvorschläge.
 \paragraph*{Parameter}
 \begin{itemize}
-    \item input : String Die Eingabe, den der Benutzer zur Suche eingegeben hat.
+    \item \texttt{input : String} Die Eingabe, den der Benutzer zur Suche eingegeben hat.
 \end{itemize}
 \paragraph*{Rückgabewert}
 Void.
@@ -43,7 +43,7 @@ Zeigt das Kartenobjekt zu dem ausgewählten Suchvorschlag an und wechselt dazu i
 Fordert die Speicherung des ausgewählten Suchvorschlags von einer Klasse, die ISearchModel implementiert.
 \paragraph*{Parameter}
 \begin{itemize}
-    \item suggestion : String Der ausgewählte Suchvorschlag.
+    \item \texttt{suggestion : String} Der ausgewählte Suchvorschlag.
 \end{itemize}
 \paragraph*{Rückgabewert}
 Void.
