--- a/Kapitel/02_App/06_Signup/Klassen/ISignInController/main.tex
+++ b/Kapitel/02_App/06_Signup/Klassen/ISignInController/main.tex
@@ -17,7 +17,7 @@ List<String> mit den Namen aller unterstützen Anmeldediensten.
 Speichert, ob der Benutzer den Datenschutz akzeptiert hat.
 \paragraph*{Parameter}
 \begin{itemize}
-    \item value : boolean Wert, ob der Benutzer den Datenschutz akzeptiert hat.
+    \item \texttt{value : boolean} Wert, ob der Benutzer den Datenschutz akzeptiert hat.
 \end{itemize}
 \paragraph*{Rückgabewert}
 Void.
@@ -26,7 +26,7 @@ Void.
 \paragraph*{Beschreibung}
 Gibt den Wert zurück, ob der Benutzer den Datenschutz akzeptiert hat.
 \paragraph*{Parameter}
-keine.
+Keine.
 \paragraph*{Rückgabewert}
 Livedata<boolean>, ob der Benutzer den Datenschutz akzeptiert hat.
 
@@ -38,7 +38,7 @@ Ausgelöst, wenn der Benutzer einen Anmeldedienst auswählt.
 Der Aufruf wird an das Model weitergegeben.
 \paragraph*{Parameter}
 \begin{itemize}
-    \item provider : String ausgewählter Anmeldedienst.
+    \item \texttt{provider : String} ausgewählter Anmeldedienst.
 \end{itemize}
 \paragraph*{Rückgabewert}
 boolean, ob die Anmeldung erfolgreich war.
