--- a/Kapitel/02_App/06_Signup/Klassen/SignInModel/main.tex
+++ b/Kapitel/02_App/06_Signup/Klassen/SignInModel/main.tex
@@ -21,7 +21,7 @@ Diese öffnet sich im Browser. Nach der Anmeldung werden die erhaltenen Access-,
 Dem Server wird die Anmeldung mitgeteilt. Der Server sendet eine UserId für den Benutzer, die in der App gespeichert wird.
 \paragraph*{Parameter}
 \begin{itemize}
-    \item provider : String ausgewählter Anmeldedienst.
+    \item \texttt{provider : String} ausgewählter Anmeldedienst.
 \end{itemize}
 \paragraph*{Rückgabewert}
 boolean, ob die Anmeldung erfolgreich war.
