--- a/Kapitel/02_App/07_Settings/Klassen/SettingsController/main.tex
+++ b/Kapitel/02_App/07_Settings/Klassen/SettingsController/main.tex
@@ -9,7 +9,7 @@ Dieses Interface bietet eine Schnittstelle für die Verwaltung der Einstellungen
 Prüft, ob die Sprache ein Wert aus getSupportedLanguages() ist und wenn ja, veranlasst die Umstellung der App in die Sprache.
 \paragraph*{Parameter}
 \begin{itemize}
-    \item language : String = Sprache, in der die App angezeigt werden soll.
+    \item \texttt{language : String} Sprache, in der die App angezeigt werden soll.
 \end{itemize}
 \paragraph*{Rückgabewert}
 Void.
@@ -19,7 +19,7 @@ Void.
 Veranlasst die Umstellung der App auf ein Theme.
 \paragraph*{Parameter}
 \begin{itemize}
-    \item theme : Theme = Theme, in dem die App angezeigt werden soll.
+    \item \texttt{theme : Theme} Theme, in dem die App angezeigt werden soll.
 \end{itemize}
 \paragraph*{Rückgabewert}
 Void.
@@ -37,7 +37,7 @@ Void.
 Veranlasst die Änderung der Speicherung des Suchverlaufs abhängig vom gegebenen Wert.
 \paragraph*{Parameter}
 \begin{itemize}
-    \item value : boolean = Wert, ob der Suchverlauf gespeichert werden soll oder nicht.
+    \item \texttt{value : boolean} Wert, ob der Suchverlauf gespeichert werden soll oder nicht.
 \end{itemize}
 \paragraph*{Rückgabewert}
 Void.
