--- a/Kapitel/02_App/10_DataStorage/Daten/SharedPreferences/main.tex
+++ b/Kapitel/02_App/10_DataStorage/Daten/SharedPreferences/main.tex
@@ -6,26 +6,26 @@ Folgende Daten werden über Shared Preferences gespeichert:
 \begin{itemize}
     \item Einstellungen: 
     \begin{itemize}
-        \item language : String Identifier für die ausgewählte Sprache, die in der App verwendet wird.
-        \item theme : String Identifier für das ausgewählte Theme, das in der App verwendet wird.
-        \item storeSearches : boolean Wert, ob die letzten Suchbegriffe im Suchverlauf gespeichert werden.
+        \item \texttt{language : String} Identifier für die ausgewählte Sprache, die in der App verwendet wird.
+        \item \texttt{theme : String} Identifier für das ausgewählte Theme, das in der App verwendet wird.
+        \item \texttt{storeSearches : boolean} Wert, ob die letzten Suchbegriffe im Suchverlauf gespeichert werden.
     \end{itemize}
     \item Positionsdaten:
     \begin{itemize}
-        \item lastPosLongitude : double Längengrad der gespeicherten letzten Position.
-        \item lastPosLatitude : double Breitengrad der gespeicherten letzten Position.
+        \item \texttt{lastPosLongitude : double} Längengrad der gespeicherten letzten Position.
+        \item \texttt{lastPosLatitude : double} Breitengrad der gespeicherten letzten Position.
     \end{itemize}
     \item Datenbankversionen:
     \begin{itemize}
-        \item globalAliasVersion : int Version der lokalen Kopie der globalen Alias-Tabelle.
+        \item \texttt{globalAliasVersion : int} Version der lokalen Kopie der globalen Alias-Tabelle.
     \end{itemize}
     \item Anmeldedaten
     \begin{itemize}
-        \item isSignedIn : boolean Wert, ob sich der Benutzer angemeldet und noch nicht wieder abgemeldet hat.
-        \item plattform : String Anmeldedienst, mit der sich der Benutzer angemeldet hat.
-        \item accessToken : String AccessToken.
-        \item idToken : JWT Vom Anmeldedienst übermitteltes ID-Token.
-        \item refreshToken : String Refresh-Token.
-        \item userId : String Vom Server vergebene UserId.
+        \item \texttt{isSignedIn : boolean} Wert, ob sich der Benutzer angemeldet und noch nicht wieder abgemeldet hat.
+        \item \texttt{plattform : String} Anmeldedienst, mit der sich der Benutzer angemeldet hat.
+        \item \texttt{accessToken : String} AccessToken.
+        \item \texttt{idToken : JWT} Vom Anmeldedienst übermitteltes ID-Token.
+        \item \texttt{refreshToken : String} Refresh-Token.
+        \item \texttt{userId : String} Vom Server vergebene UserId.
     \end{itemize}
 \end{itemize}
