--- a/Kapitel/02_App/03_Map/01_View/MapObjectMarker/main.tex
+++ b/Kapitel/02_App/03_Map/01_View/MapObjectMarker/main.tex
@@ -12,9 +12,9 @@ wird in die Subklassen ausgelagert, da dies je nach Kartenobjekttyp variiert.
 Erstellt eine neue MapObjectMarker-Instanz.
 \paragraph*{Parameter}
 \begin{itemize}
-    \item mapView : MapView MapView auf der der Marker angezeigt wird.
-    \item data : DisplayData Alle Daten, die zur Erstellung des Markers benötigt werden.
-    \item tileMarkerOverlay : TileMarkerOverlay TileMarkerOverlay-Instanz, der ein Klick 
+    \item \texttt{mapView : MapView} MapView auf der der Marker angezeigt wird.
+    \item \texttt{data : DisplayData} Alle Daten, die zur Erstellung des Markers benötigt werden.
+    \item \texttt{tileMarkerOverlay : TileMarkerOverlay} TileMarkerOverlay-Instanz, der ein Klick 
     auf diesen Marker mitgeteilt wird. Darf null sein.
 \end{itemize}
 
@@ -32,8 +32,8 @@ Das Anklicken dieses Markers wird der TileMarkerOverlay-Instanz mitgeteilt.
 \paragraph*{Parameter}
 Für die Verarbeitung werden beide Parameter nicht benutzt. Diese sind durch Overlay vorgegeben.
 \begin{itemize}
-    \item e : MotionEvent MotionEvent
-    \item mapView : MapView MapView auf der der Marker ist.
+    \item \texttt{e : MotionEvent} MotionEvent
+    \item \texttt{mapView : MapView} MapView auf der der Marker ist.
 \end{itemize}
 \paragraph*{Rückgabewert}
 boolean, gibt true zurück, da das MotionEvent verarbeitet wurde.
@@ -43,7 +43,7 @@ boolean, gibt true zurück, da das MotionEvent verarbeitet wurde.
 Beschreibt das (graphische) Verhalten des Markers, wenn das zugehörige Objekt fokussiert wird.
 \paragraph*{Parameter}
 \begin{itemize}
-    \item floorMapExists : boolean Genau dann wahr, wenn es zum (evtl. indirekt) ausgewählten Gebäude eine Etagenkarte gibt.
+    \item \texttt{floorMapExists : boolean} Genau dann wahr, wenn es zum (evtl. indirekt) ausgewählten Gebäude eine Etagenkarte gibt.
 \end{itemize}
 \paragraph*{Rückgabewert}
 Void.
@@ -71,7 +71,7 @@ Gibt es für das Gebäude eine Etagenkarte, wird der Marker nicht weiter angezei
 Gibt es keine Etagenkarte, wird der Marker als großer Standort-Pfeil angezeigt.
 \paragraph*{Parameter}
 \begin{itemize}
-    \item floorMapExists : boolean Genau dann wahr, wenn es zum (evtl. indirekt) ausgewählten Gebäude eine Etagenkarte gibt.
+    \item \texttt{floorMapExists : boolean} Genau dann wahr, wenn es zum (evtl. indirekt) ausgewählten Gebäude eine Etagenkarte gibt.
 \end{itemize}
 \paragraph*{Rückgabewert}
 Void.
@@ -94,7 +94,7 @@ Beschreibt das (graphische) Verhalten des Markers, wenn der zugehörige Raum fok
 Der Marker als großer Standort-Pfeil angezeigt.
 \paragraph*{Parameter}
 \begin{itemize}
-    \item floorMapExists : boolean Genau dann wahr, wenn es zum (evtl. indirekt) ausgewählten Gebäude eine Etagenkarte gibt.
+    \item \texttt{floorMapExists : boolean} Genau dann wahr, wenn es zum (evtl. indirekt) ausgewählten Gebäude eine Etagenkarte gibt.
 \end{itemize}
 \paragraph*{Rückgabewert}
 Void.
