--- a/Kapitel/02_App/03_Map/02_ViewModel/MapLayerDataController/main.tex
+++ b/Kapitel/02_App/03_Map/02_ViewModel/MapLayerDataController/main.tex
@@ -18,7 +18,7 @@ Diese Methode kümmert sich um die Fokussierung des richtigen Kartenobjekts. Eve
 aus oder in die Etagenansicht gewechselt werden.
 \paragraph*{Parameter}
 \begin{itemize}
-    \item mapId : int MapId des ausgewählten Kartenobjekts.
+    \item \texttt{mapId : int} MapId des ausgewählten Kartenobjekts.
 \end{itemize}
 \paragraph*{Rückgabewert}
 Void.
