--- a/Kapitel/02_App/03_Map/03_Model/DisplayDataProvider/main.tex
+++ b/Kapitel/02_App/03_Map/03_Model/DisplayDataProvider/main.tex
@@ -20,8 +20,8 @@ Gibt DisplayData-Objekte zu allen Räumen einer Etage eines Gebäudes zurück.\\
 Die Liste ist leer, wenn es keine hinterlegten Räume gibt.
 \paragraph*{Parameter}
 \begin{itemize}
-    \item mapId : int MapId des Gebäudes.
-    \item level : int Stockwerk.
+    \item \texttt{mapId : int} MapId des Gebäudes.
+    \item \texttt{level : int} Stockwerk.
 \end{itemize}
 \paragraph*{Rückgabewert}
 LiveData<List<DisplayData>>, DisplayData für Räume einer Etage.
