--- a/Kapitel/02_App/03_Map/03_Model/IMapDataProvider/main.tex
+++ b/Kapitel/02_App/03_Map/03_Model/IMapDataProvider/main.tex
@@ -13,8 +13,8 @@ Gibt DisplayData-Objekte zu allen Räumen einer Etage eines Gebäudes zurück.\\
 Die Liste ist leer, wenn es keine hinterlegten Räume gibt.
 \paragraph*{Parameter}
 \begin{itemize}
-    \item mapId : int MapId des Gebäudes.
-    \item level : int Stockwerk.
+    \item \texttt{mapId : int} MapId des Gebäudes.
+    \item \texttt{level : int} Stockwerk.
 \end{itemize}
 \paragraph*{Rückgabewert}
 LiveData<List<DisplayData>>, DisplayData für Räume einer Etage.
@@ -27,8 +27,8 @@ Gibt eine \href{https://osmdroid.github.io/osmdroid/javadocAll/org/osmdroid/tile
 Existiert die angeforderte Etagenkarte nicht auf dem Gerät, wird null zurückgegeben.
 \paragraph*{Parameter}
 \begin{itemize}
-    \item mapId : int MapId des Gebäudes.
-    \item level : int Stockwerk.
+    \item \texttt{mapId : int} MapId des Gebäudes.
+    \item \texttt{level : int} Stockwerk.
 \end{itemize}
 \paragraph*{Rückgabewert}
 \href{https://osmdroid.github.io/osmdroid/javadocAll/org/osmdroid/tileprovider/tilesource/ITileSource.html}
@@ -49,8 +49,8 @@ Gibt eine \href{https://osmdroid.github.io/osmdroid/javadocAll/org/osmdroid/tile
 {ITileSource} mit den Kartendaten für alle Gebäude zurück.
 \paragraph*{Parameter}
 \begin{itemize}
-    \item mapId : int MapId des Gebäudes.
-    \item level : int Stockwerk.
+    \item \texttt{mapId : int} MapId des Gebäudes.
+    \item \texttt{level : int} Stockwerk.
 \end{itemize}
 \paragraph*{Rückgabewert}
 \href{https://osmdroid.github.io/osmdroid/javadocAll/org/osmdroid/tileprovider/tilesource/ITileSource.html}
@@ -72,7 +72,7 @@ IGeoPoint mit letzter gespeicherter Position (oder Default-Wert), ist nie null.
 Speichert eine Position als letzte Position.
 \paragraph*{Parameter}
 \begin{itemize}
-    \item pos : IGeoPoint zu speichernde Position.
+    \item \texttt{pos : IGeoPoint} zu speichernde Position.
 \end{itemize}
 \paragraph*{Rückgabewert}
 Void.
@@ -82,7 +82,7 @@ Void.
 Gibt die Adresse eines Gebäudes zurück.
 \paragraph*{Parameter}
 \begin{itemize}
-    \item mapId : int MapId des Gebäudes.
+    \item \texttt{mapId : int} MapId des Gebäudes.
 \end{itemize}
 \paragraph*{Rückgabewert}
 String mit Adresse, oder \texttt{null}, wenn MapId kein Gebäude ist.
@@ -100,7 +100,7 @@ Diese Methode gibt zu einem, durch seine MapId gegebenen, Raum folgende Informat
 Ist die gegebene MapId ungültig oder kein Raum, wird \texttt{null} zurückgegeben.
 \paragraph*{Parameter}
 \begin{itemize}
-    \item mapId : int MapId des Raums.
+    \item \texttt{mapId : int} MapId des Raums.
 \end{itemize}
 \paragraph*{Rückgabewert}
 (RoomType, String, int, List<String>) Raumdaten oder \texttt{null}.
@@ -114,7 +114,7 @@ Personen zurück. Diese kann leer sein.\\
 Ist die gegebene MapId ungültig ist sie ebenfalls leer.
 \paragraph*{Parameter}
 \begin{itemize}
-    \item mapId : int MapId des Kartenobjekts.
+    \item \texttt{mapId : int} MapId des Kartenobjekts.
 \end{itemize}
 \paragraph*{Rückgabewert}
 List<String> mit den Namen aller zugeordneten Personen.
