--- a/Kapitel/02_App/03_Map/03_Model/TileSourceProvider/main.tex
+++ b/Kapitel/02_App/03_Map/03_Model/TileSourceProvider/main.tex
@@ -15,8 +15,8 @@ Gibt eine \href{https://osmdroid.github.io/osmdroid/javadocAll/org/osmdroid/tile
 Existiert die angeforderte Etagenkarte nicht auf dem Gerät, wird null zurückgegeben.
 \paragraph*{Parameter}
 \begin{itemize}
-    \item mapId : int MapId des Gebäudes.
-    \item level : int Stockwerk.
+    \item \texttt{mapId : int} MapId des Gebäudes.
+    \item \texttt{level : int} Stockwerk.
 \end{itemize}
 \paragraph*{Rückgabewert}
 \href{https://osmdroid.github.io/osmdroid/javadocAll/org/osmdroid/tileprovider/tilesource/ITileSource.html}
@@ -29,8 +29,8 @@ Gibt eine \href{https://osmdroid.github.io/osmdroid/javadocAll/org/osmdroid/tile
 {ITileSource} mit den Kartendaten für alle Gebäude zurück.
 \paragraph*{Parameter}
 \begin{itemize}
-    \item mapId : int MapId des Gebäudes.
-    \item level : int Stockwerk.
+    \item \texttt{mapId : int} MapId des Gebäudes.
+    \item \texttt{level : int} Stockwerk.
 \end{itemize}
 \paragraph*{Rückgabewert}
 \href{https://osmdroid.github.io/osmdroid/javadocAll/org/osmdroid/tileprovider/tilesource/ITileSource.html}
