--- a/Kapitel/02_App/03_Map/04_Util/DisplayData/main.tex
+++ b/Kapitel/02_App/03_Map/04_Util/DisplayData/main.tex
@@ -15,10 +15,10 @@ Karte benötigt werden. Dies sind insbesondere
 Erstellt eine neue DisplayData-Instanz.
 \paragraph*{Parameter}
 \begin{itemize}
-    \item latitude : double Breitengrad der Position auf der Karte.
-    \item longitude : double Längengrad der Position auf der Karte.
-    \item name : String Anzeigename auf der Karte.
-    \item mapId : int MapId des Kartenobjekts.
+    \item \texttt{latitude : double} Breitengrad der Position auf der Karte.
+    \item \texttt{longitude : double} Längengrad der Position auf der Karte.
+    \item \texttt{name : String} Anzeigename auf der Karte.
+    \item \texttt{mapId : int} MapId des Kartenobjekts.
 \end{itemize}
 
 \subsubsection*{\texttt{+ getPosition() : IGeoPoint}}%$$$M
