--- a/Kapitel/02_App/04_AddAlias/Klassen/IAddAliasController/main.tex
+++ b/Kapitel/02_App/04_AddAlias/Klassen/IAddAliasController/main.tex
@@ -10,8 +10,8 @@ Außerdem stellt er existierende Aliasse bereit.
 Speichert einen neuen lokalen Alias.
 \paragraph*{Parameter}
 \begin{itemize}
-    \item mapId : int MapId des Kartenobjekts.
-    \item alias : String Alias.
+    \item \texttt{mapId : int} MapId des Kartenobjekts.
+    \item \texttt{alias : String} Alias.
 \end{itemize}
 \paragraph*{Rückgabewert}
 Void.
@@ -24,8 +24,8 @@ Ist der Benutzer nicht angemeldet oder muss sich erneut anmelden, wird der Anmel
 Konnte der Alias-Vorschlag eingereicht werden, wird \texttt{true} zurückgegeben, sonst \texttt{false}.
 \paragraph*{Parameter}
 \begin{itemize}
-    \item mapId : int MapId des Kartenobjekts.
-    \item alias : String Bezeichner.
+    \item \texttt{mapId : int} MapId des Kartenobjekts.
+    \item \texttt{alias : String} Bezeichner.
 \end{itemize}
 \paragraph*{Rückgabewert}
 boolean, ob das Einreichen erfolgreich war.
@@ -41,7 +41,7 @@ in dem sich der Raum befindet und der zweite die Raumnummer.\\
 Ist die MapId ungültig, wird ein leerer String und \texttt{null} zurückgegeben.
 \paragraph*{Parameter}
 \begin{itemize}
-    \item mapId : int MapId des Kartenobjekts.
+    \item \texttt{mapId : int} MapId des Kartenobjekts.
 \end{itemize}
 \paragraph*{Rückgabewert}
 (String, String) aus Gebäudenummer und Raumnummer (kann \texttt{null} sein).
@@ -51,7 +51,7 @@ Ist die MapId ungültig, wird ein leerer String und \texttt{null} zurückgegeben
 Gibt eine Liste aller globalen Aliasse eines Kartenobjekts zurück.
 \paragraph*{Parameter}
 \begin{itemize}
-    \item mapId : int MapId des Kartenobjekts.
+    \item \texttt{mapId : int} MapId des Kartenobjekts.
 \end{itemize}
 \paragraph*{Rückgabewert}
 List<String>, Liste der globalen Aliasse.
