Fix typos in 'Security'

--- a/Kapitel/00_Backend/Security/SecurityConfig/Beschreibung/main.tex
+++ b/Kapitel/00_Backend/Security/SecurityConfig/Beschreibung/main.tex
@@ -2,9 +2,9 @@
 \paragraph*{Kurzbeschreibung}
 Konfigurationsklasse, die die Verifiziererkomponente zur Validiereung der Access-Token in JWTFilter ermöglicht.
 \paragraph*{Beschreibung}
-Definiert den Algorithmus und mit diesem und dem Tokensecret aus \dq SecurityProperties \dq die Verifizierungskomponente.
+Definiert den Algorithmus und mit diesem und dem Tokensecret aus \dq SecurityProperties\dq{} die Verifizierungskomponente.
 \paragraph*{Methoden}
 \begin{itemize}
 	\item jwtAlgorithm(properties SecurityProperties) : Algorithm
-    \item verfier(properties : SecurityProperties, algorithm : Algorithm) : JWTVerifier
+    \item verifier(properties : SecurityProperties, algorithm : Algorithm) : JWTVerifier
 \end{itemize}	
