--- a/Kapitel/00_Backend/Security/JWTFilter/doFilterInternal()/main.tex
+++ b/Kapitel/00_Backend/Security/JWTFilter/doFilterInternal()/main.tex
@@ -3,11 +3,11 @@
 Führt den Filter aus. Hierbei wird ggf. anhand des Access-Tokens Authorisierung bzw. Authentifizierung vorgenommen.
 \paragraph*{Beschreibung}
 Zunächst wird ggf. der Token dem Header des Http-Requests entnommen. Dieser wird anschließend mithilfe des in
-\dq SecurityConfig \dq definierten Verifiers validiert. Ist er gültig, so wird zunächst der Nutzeridentifikator dem Token entnommen und mittels der \dq loadByToken \dq Methode 
-des UserService der entsprechende User geladen. Ist dieser noch nicht vorhanden, so muss dieser mitt der \dq addUser \dq Methode
+\dq SecurityConfig\dq{} definierten Verifiers validiert. Ist er gültig, so wird zunächst der Nutzeridentifikator dem Token entnommen und mittels der \dq loadByToken \dq Methode 
+des UserService der entsprechende User geladen. Ist dieser noch nicht vorhanden, so muss dieser mit der \dq addUser\dq{} Methode
 zuerst hinzugefügt und dann erneut geladen werden. Anschließend werden die Authorisierungen des Users einem \dq 
-JWTPreAuthenticationToken \dq übergeben. Anschließend wird mit der \dq getContext \dq Methode des SecurityContextHolders der 
-Security-Context geladen und diesem mittels der \dq setAuthentication() \dq Methode der erstellte JWTPreAuthenticationToken 
+JWTPreAuthenticationToken \dq übergeben. Anschließend wird mit der \dq getContext\dq{} Methode des SecurityContextHolders der 
+Security-Context geladen und diesem mittels der \dq setAuthentication()\dq{} Methode der erstellte JWTPreAuthenticationToken 
 übergeben. 
 
 so
